# laios

./: CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  WebApp.md  docker-compose.yml  mkdocs.yml  nginx.conf  pyproject.toml
config/: default.yaml
docs/: CHAT_SETUP.md  ROADMAP.md  architecture.md  changelog.md  faq.md  index.md  quickstart.md
docs/api/: core.md  execution.md  index.md  llm.md  memory.md  planning.md  plugins.md  reflection.md  tools.md
docs/guides/: configuration.md  creating-plugins.md  creating-tools.md  custom-llm-provider.md
docs/tutorials/: 01-first-agent.md  02-working-with-memory.md  03-parallel-execution.md  04-building-plugins.md
examples/: 01_personal_assistant.py  02_code_reviewer.py  03_custom_tool.py  04_streaming.py  05_multi_provider_routing.py  06_plugin_creation.py  README.md
laios.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prodsite/: index.html  script.js  style.css
tests/: test_execution.py  test_hardening.py  test_monitoring.py  test_plugins.py  test_reflection.py
tests/integration/: test_agent_flow.py
tests/unit/: test_filesystem_tools.py  test_llm.py  test_tool_registry.py  test_types.py
